--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@react-router/node": "7.10.1",
     "@react-router/serve": "7.10.1",
+    "@tanstack/react-query": "^5.90.19",
     "isbot": "^5.1.31",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
